--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -245,6 +245,10 @@ button.reset:hover:not(:has(> *)) {
   margin-right: 0.75rem;
 }
 
+.cart-lines{
+  margin-left: 0;
+}
+
 .cart-summary-page {
 
 }
@@ -509,5 +513,5 @@ button.reset:hover:not(:has(> *)) {
 * routes/product/$handle.tsx
 * --------------------------------------------------
 */
-ul, ol { list-style: disc !important; margin-left: 1.5em !important; }
+ul, ol { list-style: disc !important; margin-left: 1.5em; }
 li { list-style-type: inherit !important; }
